--- a/style.css
+++ b/style.css
@@ -674,7 +674,7 @@ footer {
 @media only screen and (min-width: 580px) and (max-width: 1024px)
 {
     header {
-        width: 93%
+        width: 90%
     }
 
     header nav {
@@ -708,7 +708,8 @@ footer {
     }
 
     .vertical .titre_2 {
-        margin-bottom:20px
+        margin-bottom:20px;
+        margin-right:0;
     }
 
     #activites {
@@ -720,8 +721,7 @@ footer {
         order: 1;
         height: auto;
         width: 45%;
-        margin-right: 50px;
-        margin-left: 3%;
+        margin-right: 15px;
     }
 
     #activites .vertical.second {
@@ -736,12 +736,12 @@ footer {
     #activites .double.first {
         order: 3;
         display: flex;
-        margin-left: 25px;
+        
     }
 
     #activites .double a{
         width: 45%;
-        margin-right: 50px;
+        margin-right: 15px;
     }
     .double .titre_2 {
         margin-right: 0;
@@ -753,7 +753,7 @@ footer {
     #activites .double.second {
         order: 4;
         display: flex;
-        margin-left: 25px;
+        
 
     }
     #section_1 {
@@ -763,6 +763,6 @@ footer {
         width: 95%;
     }
     .a_propos {
-        margin-right: 15%;
+        margin-right: 12%;
     }
 }
