--- a/style.css
+++ b/style.css
@@ -673,6 +673,10 @@ footer {
 
 @media only screen and (min-width: 580px) and (max-width: 1024px)
 {
+
+    #bloc_page {
+        width: 747px;
+    }
     header {
         width: 90%
     }
