--- a/style.css
+++ b/style.css
@@ -674,9 +674,7 @@ footer {
 @media only screen and (min-width: 580px) and (max-width: 1024px)
 {
 
-    #bloc_page {
-        width: 747px;
-    }
+    
     header {
         width: 90%
     }
@@ -740,7 +738,7 @@ footer {
     #activites .double.first {
         order: 3;
         display: flex;
-        
+        width: 100%
     }
 
     #activites .double a{
@@ -762,6 +760,11 @@ footer {
     }
     #section_1 {
     display: flex;
+    width: 93%;
+    }
+    #section_2 {
+    width: 90%;
+    margin: auto;
     }
     footer {
         width: 95%;
